--- a/JavaProj/src/sample/sample.fxml
+++ b/JavaProj/src/sample/sample.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
+<?import java.awt.Image?>
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
       <ColumnConstraints />
@@ -31,7 +32,7 @@
             <Pane layoutX="352.0" layoutY="91.0" prefHeight="389.0" prefWidth="500.0" style="-fx-background-color: lightgreen;">
                <children>
                   <JFXSpinner layoutX="415.0" layoutY="308.0" />
-                  <ImageView fx:id="image_view" fitHeight="389.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView id="image_view" layoutX="415.0" layoutY="390.0" fx:id="image_view" fitHeight="389.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
          </children>
